# EcoEco

./: README.md
3D프린터/: 3D프린터.md  엑추에이터 지지대 v3.stl  정지 표지판 v0.stl  커브 표지판 v1.stl  컨베이어 받침대 v2.stl  컨베이어 받침대9cm v2.stl
Arduino/: arduino.md  servo_angle.ino
PLC/: 3차 프로젝트.TDS  plc.md
PLC/PLC_시스템_최종/: 컨베이어_테스트.state  컨베이어_테스트.xgwx  컨베이어_테스트.xgwx_bkx0  컨베이어_테스트.xgwx_bkx1  컨베이어_테스트.xgwx_bkx2
myAgv/: agv.md  agv_project3.py  myagv_project3 5_28.py
myCobot/: cobot.md  demoControl.py
myCobot/catkin_ws/src/recycle_bot/: CMakeLists.txt  package.xml
myCobot/catkin_ws/src/recycle_bot/launch/: recycle_launch.launch
myCobot/catkin_ws/src/recycle_bot/msg/: TrashDetection.msg
myCobot/catkin_ws/src/recycle_bot/src/: control_subscriber.py  detection_publisher.py
